compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__try_operator_chain.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: Some(
                    Type {
                        kind: Path(
                            TypePath {
                                segments: [
                                    TypePathSegment {
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 10,
                                                end: 16,
                                                start_line: 1,
                                                start_col: 11,
                                            },
                                        },
                                        args: Some(
                                            TypeArgs {
                                                args: [
                                                    Type(
                                                        Type {
                                                            kind: Path(
                                                                TypePath {
                                                                    segments: [
                                                                        TypePathSegment {
                                                                            name: Spanned {
                                                                                node: SymbolU32 {
                                                                                    value: 3,
                                                                                },
                                                                                span: Span {
                                                                                    start: 17,
                                                                                    end: 20,
                                                                                    start_line: 1,
                                                                                    start_col: 18,
                                                                                },
                                                                            },
                                                                            args: None,
                                                                        },
                                                                    ],
                                                                    span: Span {
                                                                        start: 17,
                                                                        end: 20,
                                                                        start_line: 1,
                                                                        start_col: 18,
                                                                    },
                                                                },
                                                            ),
                                                            span: Span {
                                                                start: 17,
                                                                end: 20,
                                                                start_line: 1,
                                                                start_col: 18,
                                                            },
                                                        },
                                                    ),
                                                    Type(
                                                        Type {
                                                            kind: Path(
                                                                TypePath {
                                                                    segments: [
                                                                        TypePathSegment {
                                                                            name: Spanned {
                                                                                node: SymbolU32 {
                                                                                    value: 4,
                                                                                },
                                                                                span: Span {
                                                                                    start: 22,
                                                                                    end: 23,
                                                                                    start_line: 1,
                                                                                    start_col: 23,
                                                                                },
                                                                            },
                                                                            args: None,
                                                                        },
                                                                    ],
                                                                    span: Span {
                                                                        start: 22,
                                                                        end: 23,
                                                                        start_line: 1,
                                                                        start_col: 23,
                                                                    },
                                                                },
                                                            ),
                                                            span: Span {
                                                                start: 22,
                                                                end: 23,
                                                                start_line: 1,
                                                                start_col: 23,
                                                            },
                                                        },
                                                    ),
                                                ],
                                                span: Span {
                                                    start: 16,
                                                    end: 24,
                                                    start_line: 1,
                                                    start_col: 17,
                                                },
                                            },
                                        ),
                                    },
                                ],
                                span: Span {
                                    start: 10,
                                    end: 24,
                                    start_line: 1,
                                    start_col: 11,
                                },
                            },
                        ),
                        span: Span {
                            start: 10,
                            end: 24,
                            start_line: 1,
                            start_col: 11,
                        },
                    },
                ),
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: MethodCall {
                                    receiver: Expr {
                                        kind: MethodCall {
                                            receiver: Expr {
                                                kind: MethodCall {
                                                    receiver: Expr {
                                                        kind: MethodCall {
                                                            receiver: Expr {
                                                                kind: Call {
                                                                    callee: Expr {
                                                                        kind: Path(
                                                                            ExprPath {
                                                                                segments: [
                                                                                    ExprPathSegment {
                                                                                        name: Spanned {
                                                                                            node: SymbolU32 {
                                                                                                value: 5,
                                                                                            },
                                                                                            span: Span {
                                                                                                start: 27,
                                                                                                end: 28,
                                                                                                start_line: 1,
                                                                                                start_col: 28,
                                                                                            },
                                                                                        },
                                                                                        args: None,
                                                                                    },
                                                                                ],
                                                                                span: Span {
                                                                                    start: 27,
                                                                                    end: 28,
                                                                                    start_line: 1,
                                                                                    start_col: 28,
                                                                                },
                                                                            },
                                                                        ),
                                                                        span: Span {
                                                                            start: 27,
                                                                            end: 28,
                                                                            start_line: 1,
                                                                            start_col: 28,
                                                                        },
                                                                    },
                                                                    args: [],
                                                                },
                                                                span: Span {
                                                                    start: 27,
                                                                    end: 30,
                                                                    start_line: 1,
                                                                    start_col: 28,
                                                                },
                                                            },
                                                            method: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 6,
                                                                },
                                                                span: Span {
                                                                    start: 30,
                                                                    end: 31,
                                                                    start_line: 1,
                                                                    start_col: 31,
                                                                },
                                                            },
                                                            type_args: None,
                                                            args: [],
                                                        },
                                                        span: Span {
                                                            start: 27,
                                                            end: 31,
                                                            start_line: 1,
                                                            start_col: 28,
                                                        },
                                                    },
                                                    method: Spanned {
                                                        node: SymbolU32 {
                                                            value: 7,
                                                        },
                                                        span: Span {
                                                            start: 32,
                                                            end: 33,
                                                            start_line: 1,
                                                            start_col: 33,
                                                        },
                                                    },
                                                    type_args: None,
                                                    args: [],
                                                },
                                                span: Span {
                                                    start: 27,
                                                    end: 35,
                                                    start_line: 1,
                                                    start_col: 28,
                                                },
                                            },
                                            method: Spanned {
                                                node: SymbolU32 {
                                                    value: 6,
                                                },
                                                span: Span {
                                                    start: 35,
                                                    end: 36,
                                                    start_line: 1,
                                                    start_col: 36,
                                                },
                                            },
                                            type_args: None,
                                            args: [],
                                        },
                                        span: Span {
                                            start: 27,
                                            end: 36,
                                            start_line: 1,
                                            start_col: 28,
                                        },
                                    },
                                    method: Spanned {
                                        node: SymbolU32 {
                                            value: 8,
                                        },
                                        span: Span {
                                            start: 37,
                                            end: 38,
                                            start_line: 1,
                                            start_col: 38,
                                        },
                                    },
                                    type_args: None,
                                    args: [],
                                },
                                span: Span {
                                    start: 27,
                                    end: 40,
                                    start_line: 1,
                                    start_col: 28,
                                },
                            },
                        ),
                        span: Span {
                            start: 25,
                            end: 42,
                            start_line: 1,
                            start_col: 26,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 42,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 42,
        start_line: 1,
        start_col: 1,
    },
}
