compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__tuple_expr.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Tuple(
                                    [
                                        Expr {
                                            kind: Literal(
                                                Literal {
                                                    kind: Int {
                                                        value: 1,
                                                        suffix: None,
                                                    },
                                                    span: Span {
                                                        start: 10,
                                                        end: 11,
                                                        start_line: 1,
                                                        start_col: 11,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 10,
                                                end: 11,
                                                start_line: 1,
                                                start_col: 11,
                                            },
                                        },
                                        Expr {
                                            kind: Literal(
                                                Literal {
                                                    kind: String(
                                                        "hello",
                                                    ),
                                                    span: Span {
                                                        start: 13,
                                                        end: 20,
                                                        start_line: 1,
                                                        start_col: 14,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 13,
                                                end: 20,
                                                start_line: 1,
                                                start_col: 14,
                                            },
                                        },
                                        Expr {
                                            kind: Literal(
                                                Literal {
                                                    kind: Bool(
                                                        true,
                                                    ),
                                                    span: Span {
                                                        start: 22,
                                                        end: 26,
                                                        start_line: 1,
                                                        start_col: 23,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 22,
                                                end: 26,
                                                start_line: 1,
                                                start_col: 23,
                                            },
                                        },
                                    ],
                                ),
                                span: Span {
                                    start: 9,
                                    end: 27,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 29,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 29,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 29,
        start_line: 1,
        start_col: 1,
    },
}
